<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>qSlicerPlotsModuleWidget</class>
 <widget class="qSlicerWidget" name="qSlicerPlotsModuleWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>349</width>
    <height>434</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Plots</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../qSlicerPlotsModule.qrc">
    <normaloff>:/Icons/Plots.png</normaloff>:/Icons/Plots.png</iconset>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QTabWidget" name="PlotsTabWidget">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="charts">
      <attribute name="title">
       <string>Charts</string>
      </attribute>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="PlotChartLabel">
         <property name="minimumSize">
          <size>
           <width>0</width>
           <height>27</height>
          </size>
         </property>
         <property name="text">
          <string>Chart:</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <property name="sizeConstraint">
          <enum>QLayout::SetMinimumSize</enum>
         </property>
         <item>
          <widget class="qMRMLNodeComboBox" name="PlotChartNodeSelector">
           <property name="nodeTypes">
            <stringlist notr="true">
             <string>vtkMRMLPlotChartNode</string>
            </stringlist>
           </property>
           <property name="renameEnabled">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="ShowChartButton">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>30</width>
             <height>0</height>
            </size>
           </property>
           <property name="toolTip">
            <string>Allow plot editing</string>
           </property>
           <property name="text">
            <string/>
           </property>
           <property name="icon">
            <iconset resource="../../../../../Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc">
             <normaloff>:/Icons/Medium/SlicerVisible.png</normaloff>:/Icons/Medium/SlicerVisible.png</iconset>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item row="1" column="0" colspan="2">
        <widget class="qMRMLPlotChartPropertiesWidget" name="PlotChartPropertiesWidget"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="series">
      <attribute name="title">
       <string>Series</string>
      </attribute>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="PlotDataSeriesLabel">
         <property name="text">
          <string>Data series:</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="qMRMLNodeComboBox" name="PlotSeriesNodeSelector">
         <property name="nodeTypes">
          <stringlist notr="true">
           <string>vtkMRMLPlotSeriesNode</string>
          </stringlist>
         </property>
         <property name="renameEnabled">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="0" colspan="2">
        <widget class="qMRMLPlotSeriesPropertiesWidget" name="PlotSeriesPropertiesWidget"/>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="ctkPushButton" name="copyPlotSeriesNodePushButton">
         <property name="text">
          <string>Clone data series</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeType">
      <enum>QSizePolicy::Expanding</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>1</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <spacer name="BottomSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeType">
      <enum>QSizePolicy::Fixed</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>qMRMLNodeComboBox</class>
   <extends>QWidget</extends>
   <header>qMRMLNodeComboBox.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qMRMLWidget</class>
   <extends>QWidget</extends>
   <header>qMRMLWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qSlicerWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qMRMLPlotChartPropertiesWidget</class>
   <extends>qMRMLWidget</extends>
   <header>qMRMLPlotChartPropertiesWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qMRMLPlotSeriesPropertiesWidget</class>
   <extends>qMRMLWidget</extends>
   <header>qMRMLPlotSeriesPropertiesWidget.h</header>
  </customwidget>
  <customwidget>
   <class>ctkPushButton</class>
   <extends>QPushButton</extends>
   <header>ctkPushButton.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../qSlicerPlotsModule.qrc"/>
  <include location="../../../../../Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>PlotChartNodeSelector</sender>
   <signal>currentNodeChanged(vtkMRMLNode*)</signal>
   <receiver>PlotChartPropertiesWidget</receiver>
   <slot>setMRMLPlotChartNode(vtkMRMLNode*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>175</x>
     <y>50</y>
    </hint>
    <hint type="destinationlabel">
     <x>131</x>
     <y>137</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerPlotsModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>PlotChartNodeSelector</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>143</x>
     <y>461</y>
    </hint>
    <hint type="destinationlabel">
     <x>144</x>
     <y>44</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerPlotsModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>PlotSeriesPropertiesWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>143</x>
     <y>461</y>
    </hint>
    <hint type="destinationlabel">
     <x>143</x>
     <y>708</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerPlotsModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>PlotSeriesNodeSelector</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>143</x>
     <y>461</y>
    </hint>
    <hint type="destinationlabel">
     <x>175</x>
     <y>530</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>PlotSeriesNodeSelector</sender>
   <signal>currentNodeChanged(vtkMRMLNode*)</signal>
   <receiver>PlotSeriesPropertiesWidget</receiver>
   <slot>setMRMLPlotSeriesNode(vtkMRMLNode*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>116</x>
     <y>531</y>
    </hint>
    <hint type="destinationlabel">
     <x>129</x>
     <y>597</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>PlotChartNodeSelector</sender>
   <signal>currentNodeChanged(bool)</signal>
   <receiver>ShowChartButton</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>206</x>
     <y>42</y>
    </hint>
    <hint type="destinationlabel">
     <x>262</x>
     <y>44</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerPlotsModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>PlotChartPropertiesWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>143</x>
     <y>461</y>
    </hint>
    <hint type="destinationlabel">
     <x>143</x>
     <y>240</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
